# estate

./: .env_demo  .env_example  .evn  .gitignore  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  efk.yml  environment.yml  environment_example  environment_example_windows  environment_example_windows.bat  pyproject.toml
airflow/: Dockerfile
airflow/config/: airflow.cfg  requirements.txt
airflow/dags/: bolig_example.py  estate_bolig_example.py  get_dk_zipcode.py  mine_boliga_postal.py  mine_boligas.py  pandas_postgres.py  pyscopg_pandas_to_postgres.py  python_dags.py  sqlalachemy_pandas_postgres.py  test_db.py
airflow/dags/pipelines/: boliga.py  boligax.py
airflow/dags/subdags/: mine_boliga.py
airflow/script/: entrypoint.sh
containers/postgres/: Dockerfile
estates/: Dockerfile  README.md  dagit.env  dagster.yaml  setup.py  workspace.yaml
estates/.telemetry/: id.yaml
estates/estates/: __init__.py  repository.py
estates/history/: runs.db
estates/schedules/: schedules.db
jobs/dags/: .airflowignore  bolig_example.py  bolig_price_slack.py  estate_bolig_example.py  estate_data_example.py  fartkontrol.py  get_dk_zipcode.py  mine_boliga_postal.py  mine_boligas.py  postgres_elasticsearch.py
postgres/: init.sql
services/airflow/: Dockerfile  airflow.env
services/dagster/: Dockerfile  dagit.env  dagster.yaml
services/minio/: minio.env
services/nginx/: nginx.conf
services/pgadmin/: pgadmin.env
services/postgres/: init.sql  postgres.env
source/: celerybeat-schedule.bak  manual_task_trigger.py  mongo_config.py  stock.py  tasks.py
(+83 files in other folders)
