
[tool.poetry]
name = "advance_scraping"
version = "0.0.1"
description = "Advance Web Scraping Pipelines"
authors = ["Prayson W. Daniel <praysonpi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0"
pandas = "^1.4.2"
httpx = "^0.23.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
dagster = "^0.14.16"
dagit = "^0.14.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
